--- a/src/app/modules/administrador/register-profesor/pages/register-profesor/register-profesor.component.html
+++ b/src/app/modules/administrador/register-profesor/pages/register-profesor/register-profesor.component.html
@@ -11,16 +11,17 @@
 
 <body>
   <div class="container mt-4">
-    <h2 class="mb-4">Formulario de Profesor</h2>
-    <form >
+    <h2 class="mb-4">Formulario de Docente</h2>
+    <form>
       <div class="row">
         <div class="col-md-6">
           <label for="cedula" class="form-label">Cédula</label>
           <div class="input-group">
-            <input type="search" id="cedula" name="cedula" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" [(ngModel)]="cedula" />
+            <input type="search" id="cedula" name="cedula" class="form-control rounded" placeholder="Search"
+              aria-label="Search" aria-describedby="search-addon" [(ngModel)]="cedula" />
             <button type="button" class="btn btn-outline-primary" (click)=" buscarPersona(cedula)">Buscar</button>
           </div>
-          <label for="id_persona" class="form-label">Identificacion</label>
+          <br>
           <div class="input-group">
             <!-- <input type="search" id="id_persona" name="id_persona" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
             <button type="button" class="btn btn-outline-primary" (click)="buscarPersona(id_persona)"|>Buscar</button> -->
@@ -48,10 +49,7 @@
         <label for="contrasena" class="form-label">Contraseña</label>
         <input type="password" class="form-control" id="contrasena" name="password" [(ngModel)]="usuario.password" />
       </div>
-      <button  (click)="onSubmit()" type="submit" class="btn btn-primary">Enviar</button>
-
-      <button  type="submit" class="btn btn-primary">buscarRol</button>
-      
+      <button (click)="onSubmit()" type="submit" class="btn btn-primary">Guardar</button>
     </form>
   </div>
 </body>
