valid notas y mis cursos
Edisson Quinde

--- a/src/app/modules/docente-capacitador/register-notas/pages/register-notas/register-notas.component.html
+++ b/src/app/modules/docente-capacitador/register-notas/pages/register-notas/register-notas.component.html
@@ -74,7 +74,7 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="d-flex flex-column align-items-center text-center">
-                            <img src="https://e7.pngegg.com/pngimages/575/29/png-clipart-computer-icons-instructor-led-training-course-education-toolbox-miscellaneous-blue.png"
+                            <img src="https://cdn-icons-png.flaticon.com/512/4196/4196591.png"
                                 alt="Admin" class="rounded-circle" width="150">
                             <div class="mt-3">
 
