--- a/src/app/modules/participantes/cursos-aplicados/pages/cursos-aplicados/cursos-aplicados.component.html
+++ b/src/app/modules/participantes/cursos-aplicados/pages/cursos-aplicados/cursos-aplicados.component.html
@@ -18,7 +18,7 @@
                     </div>
                     <div *ngIf="curso.parEstadoaprovacion=='Reprobado'">
                         <h6 class="m-b-20">Código: {{curso.parCurso.curCodigo}}
-                            <span class="f-right" style="color: red;">Rechazado</span>
+                            <span class="f-right" style="color: red;">Reprobado</span>
                         </h6>
                     </div>
                     <h2 class="text-right"><i
@@ -134,8 +134,8 @@
           <div class="card">
             <div class="card-body">
               <div class="d-flex flex-column align-items-center text-center">
-                <img src="https://cdn-icons-png.flaticon.com/512/4196/4196591.png" alt="Admin" class="rounded-circle"
-                  width="150">
+                <img src="https://png.pngtree.com/png-vector/20190803/ourlarge/pngtree-teacher-education-presentation-school--flat-color-icon--vecto-png-image_1648907.jpg" alt="Admin" class="rounded-circle"
+                width="250">
                 <div class="mt-3">
                   <h4>{{persona.nombre}} {{persona.apellido}}</h4>
                   <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
