--- a/src/app/modules/docente-capacitador/reportes/pages/reportes/reportes.component.html
+++ b/src/app/modules/docente-capacitador/reportes/pages/reportes/reportes.component.html
@@ -116,24 +116,6 @@
     <div class="col-md-4 col-xl-3">
       <div
         class="card bg-c-blue order-card"
-        (click)="imprimirRegistroAsistenciaEvaluacion()"
-      >
-        <div class="card-block">
-          <h6 class="m-b-20">Tipo de Reporte</h6>
-          <h2 class="text-right">
-            <i class="fa fa-graduation-cap f-left"></i
-            ><span style="font-size: 25px"
-              >Ver Registro de asistencias y evaluaciones</span
-            >
-          </h2>
-          <div style="margin-bottom: 10px"></div>
-          <div style="margin-bottom: 10px"></div>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 col-xl-3">
-      <div
-        class="card bg-c-blue order-card"
         (click)="imprimirDisenoCurricular()"
       >
         <div class="card-block">
@@ -424,7 +406,7 @@
                   <h4>Informe de Asistencia del Curso</h4>
                   <div *ngIf="asistenciaCurso.acuId != 0">
                     <p class="text-secondary mb-1">Imprimir informe</p>
-                    <button type="button" class="btn btn-primary">
+                    <button type="button" class="btn btn-primary" (click)="imprimirRegistroAsistenciaEvaluacion()">
                       Imprimir
                     </button>
                   </div>
