--- a/src/app/modules/administrador/edit-list-profesor/pages/edit-list-profesor/edit-list-profesor.component.html
+++ b/src/app/modules/administrador/edit-list-profesor/pages/edit-list-profesor/edit-list-profesor.component.html
@@ -26,9 +26,9 @@
           (input)="updateSearchTerm($event)"
         />
       </div>
-      <table class="table table-striped">
+      <table class="table">
         <thead>
-          <tr>
+          <tr class="bg-primary text-light">
             <th scope="col">Cédula</th>
             <th scope="col">Nombre</th>
             <th scope="col">Apellido</th>
