--- a/src/app/modules/administrador/vista-perfil-admin/pages/vista-perfil-admin/vista-perfil-admin.component.html
+++ b/src/app/modules/administrador/vista-perfil-admin/pages/vista-perfil-admin/vista-perfil-admin.component.html
@@ -1,3 +1,4 @@
+<br>
 <div class="container">
     <div class="main-body">
       <div class="row gutters-sm">
@@ -6,7 +7,7 @@
           <div class="card">
             <div class="card-body">
               <div class="d-flex flex-column align-items-center text-center">
-                <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle"
+                <img src="https://cdn-icons-png.flaticon.com/512/4400/4400471.png" alt="Admin" class="rounded-circle"
                   width="150">
                 <div class="mt-3">
                   <h4>{{persona.nombre}} {{persona.apellido}}</h4>
