--- a/src/app/shared/components/side-bar-admin/side-bar-admin.component.html
+++ b/src/app/shared/components/side-bar-admin/side-bar-admin.component.html
@@ -59,18 +59,18 @@
     <nav class="header-nav ms-auto">
       <ul class="d-flex align-items-center">
 
-        <li class="nav-item d-block d-lg-none">
+        <!-- <li class="nav-item d-block d-lg-none">
           <a class="nav-link nav-icon search-bar-toggle " href="#">
             <i class="bi bi-search"></i>
           </a>
-        </li><!-- End Search Icon-->
+        </li>
 
         <li class="nav-item dropdown">
 
           <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
             <i class="bi bi-bell"></i>
             <span class="badge bg-primary badge-number">4</span>
-          </a><!-- End Notification Icon -->
+          </a>
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
             <li class="dropdown-header">
@@ -137,9 +137,9 @@
               <a href="#">Show all notifications</a>
             </li>
 
-          </ul><!-- End Notification Dropdown Items -->
+          </ul>
 
-        </li><!-- End Notification Nav -->
+        </li>End Notification Nav -->
 
         <li class="nav-item dropdown">
 
@@ -149,13 +149,12 @@
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
             <i class="bi bi-person " ></i>
-            <span class="d-none d-md-block dropdown-toggle ps-2">USUARIO INGRESADO</span>
+            <span class="d-none d-md-block dropdown-toggle ps-2">{{nombreUsuario}}</span>
           </a><!-- End Profile Iamge Icon -->
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
-              <h6>USARIO INGRESADO</h6>
-              <span>rol del usuario</span>
+              <span class="d-none d-md-block dropdown-toggle ps-2">{{nombreUsuario}}</span>
             </li>
             <li>
               <hr class="dropdown-divider">
@@ -192,7 +191,7 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link " href="index.html">
+        <a class="nav-link ">
           <i class="bi bi-house"></i>
           <span> Administrador</span>
         </a>
