--- a/src/app/shared/components/side-bar-participante/side-bar-participante.component.html
+++ b/src/app/shared/components/side-bar-participante/side-bar-participante.component.html
@@ -198,7 +198,7 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link " href="index.html">
+        <a class="nav-link ">
           <i class="bi bi-house"></i>
           <span> Participante</span>
         </a>
