--- a/src/app/shared/components/side-bar-sup-admin/side-bar-sup-admin.component.html
+++ b/src/app/shared/components/side-bar-sup-admin/side-bar-sup-admin.component.html
@@ -197,7 +197,7 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link " href="index.html">
+        <a class="nav-link ">
           <i class="bi bi-house"></i>
           <span> Super Administrador</span>
         </a>
